// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter blue preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #0062C9FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter blue preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #0062C9FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter blue preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter blue preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter blue-light preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #004A97FF;
  background-color: #E5F2FFFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter blue-light preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #004A97FF;
  background-color: #E5F2FFFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter blue-light preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter blue-light preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter cyan preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #006D75FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter cyan preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #006D75FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter cyan preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter cyan preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter cyan-light preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #004F55FF;
  background-color: #E6FFFBFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter cyan-light preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #004F55FF;
  background-color: #E6FFFBFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter cyan-light preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter cyan-light preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter default preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  background-color: #F4F4F5FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter default preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  background-color: #F4F4F5FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter default preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter default preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter error preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #B4384DFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter error preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #B4384DFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter error preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter error preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter geekblue preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #2F54EBFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter geekblue preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #2F54EBFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter geekblue preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter geekblue preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter geekblue-light preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #2F54EBFF;
  background-color: #D6E4FFFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter geekblue-light preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #2F54EBFF;
  background-color: #D6E4FFFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter geekblue-light preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter geekblue-light preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter gray preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #646A74FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter gray preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #646A74FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter gray preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter gray preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter gray-light preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #646A74FF;
  background-color: #F4F4F5FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter gray-light preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #646A74FF;
  background-color: #F4F4F5FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter gray-light preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter gray-light preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter green preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #34744FFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter green preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #34744FFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter green preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter green preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter green-light preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #2D6846FF;
  background-color: #E0F7EAFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter green-light preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #2D6846FF;
  background-color: #E0F7EAFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter green-light preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter green-light preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter processing preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #0062C9FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter processing preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #0062C9FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter processing preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter processing preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter purple preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #6324B8FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter purple preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #6324B8FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter purple preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter purple preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter purple-light preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #722ED1FF;
  background-color: #F9F0FFFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter purple-light preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #722ED1FF;
  background-color: #F9F0FFFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter purple-light preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter purple-light preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter red preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #B4384DFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter red preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #B4384DFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter red preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter red preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter red-light preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #902D3FFF;
  background-color: #FEEDF0FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter red-light preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #902D3FFF;
  background-color: #FEEDF0FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter red-light preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter red-light preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter success preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #34744FFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter success preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #34744FFF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter success preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter success preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter volcano preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #B72A07FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter volcano preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #B72A07FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter volcano preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter volcano preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter volcano-light preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #A42505FF;
  background-color: #FFF2E8FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter volcano-light preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #A42505FF;
  background-color: #FFF2E8FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter volcano-light preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter volcano-light preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter warning preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #925800FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter warning preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #925800FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter warning preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter warning preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter yellow preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #925800FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter yellow preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #FFFFFFFF;
  background-color: #925800FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter yellow preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter yellow preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter yellow-light preset as counter renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #805000FF;
  background-color: #FFF1B8FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="100"
  >
    99+
  </span>
</span>
`;

exports[`Counter yellow-light preset as counter with "inner={0}" and "showZero={true}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  padding: 0 4px;
  border-radius: 32px;
  min-width: 16px;
  text-align: center;
  color: #805000FF;
  background-color: #FFF1B8FF;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
  <span
    aria-live="polite"
    className="c1 rovna-ui-counter-counter"
    data-testid="rovna-ui-counter"
    role="status"
    title="0"
  >
    0
  </span>
</span>
`;

exports[`Counter yellow-light preset as counter with "inner={0}" renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root"
>
  <span>
    Child
  </span>
</span>
`;

exports[`Counter yellow-light preset with "rootClassName" property renders correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

<span
  className="c0 rovna-ui-counter-root some-custom-root-class-name"
>
  <span>
    Child
  </span>
</span>
`;
